# multi_signals_annotator

multi_signals_annotator/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
multi_signals_annotator/config/: msg_map.yaml
multi_signals_annotator/launch/: multi_signals_annotator.launch
multi_signals_annotator/scripts/: multi_signals_annotator
multi_signals_annotator/src/multi_signals_annotator/: bag.py  bag_helper.py  bag_timeline.py  bag_widget.py
rqt_bag/resource/: bag_widget.ui
rqt_bag/src/rqt_bag/: __init__.py  bag.py  bag_helper.py  bag_timeline.py  bag_widget.py  player.py
