<package format="3">
  <name>multi_signals_annotator</name>
  <version>0.5.0</version>
  <description>multi_signals_annotator based on rqt_bag, providing a GUI plugin for exporting, annotating and playing ROS bag files.</description>
  <maintainer email="jsbyysheng@gmail.com">jsbyysheng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend version_gte="0.2.12">rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
